[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus_exporter"
version = "0.12.2"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "A Python library for exporting data as metrics for Prometheus"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "zenlib >= 1.6.5",
    "aiohttp >= 3.9.1"
]

[project.scripts]
prometheus_exporter = "prometheus_exporter.main:main"
